--- a/reset.css
+++ b/reset.css
@@ -40,17 +40,7 @@ var,
 b,
 u,
 i,
-center,:root {
-  --cor-de-fundo: #EBECEE;
-}
-
-body {
-  background-color: var(--cor-de-fundo);
-}
-
-h1 {
-  background-color: white;
-}
+center,
 dl,
 dt,
 dd,
