--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
 @import url("styles/topicos.css");
 
 :root {
-    --cor-de-fundo: #EBECEE;
+    --cor-de-fundo: #AFE5E9;
     --branco: #FFFFFF;
-    --laranja: #EB9B00;
+    --laranja: #1E273D;
     --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
     --azul: #002F52;
