--- a/header.css
+++ b/header.css
@@ -2,13 +2,13 @@
     width: 24px;
     height: 24px;
     display: inline-block;
-    background-image: url("../img/menu.svg");
+    background-image: url("../menu.svg");
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .cabeçalho {
-    background-color: var(--azul);
+    background-color: var(--branco);
     display: flex;
     justify-content: space-between;
     align-items: center;
