--- a/header.css
+++ b/header.css
@@ -1,10 +1,10 @@
-.cabeçalho__menu-hamburguer {
+
+.cabeçalho_menu-hamburguer {
     width: 24px;
     height: 24px;
     display: inline-block;
-    background-image: url("../menu.svg");
+    background-image: url("../img/Menu.svg");
     background-repeat: no-repeat;
-    background-position: center;
 }
 
 .cabeçalho {
