--- a/header.css
+++ b/header.css
@@ -1,17 +1,17 @@
 
 .cabeçalho_menu-hamburguer {
-    width: 24px;
-    height: 24px;
+    width: 23px;
+    height: 23px;
     display: inline-block;
     background-image: url("../Menu.svg");
     background-repeat: no-repeat;
 }
 
 .cabeçalho {
-    background-color: var(--azul);
+    background-color: var(--branco);
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items:center;
     position: relative;
 }
 
