--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url("style/header.css");
-@import url("style/banner.css");
-@import url("style/carrossel.css");
-@import url("style/topicos.css");
+@import url("header.css");
+@import url("banner.css");
+@import url("carrossel.css");
+@import url("topicos.css");
 
 :root {
     --cor-de-fundo: #AFE5E9;
