--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 :root {
     --cor-de-fundo: #AFE5E9;
-    --branco: #FFFFFF;
+    --branco: #2592c5;
     --laranja: #1E273D;
     --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
